remove CSV file and adding python file for testing

--- a/Year4FinalProject.ipynb
+++ b/Year4FinalProject.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 54,
    "id": "59e510a9",
    "metadata": {},
    "outputs": [],
@@ -28,6 +28,7 @@
     "import seaborn as sns\n",
     "import tensorflow as tf\n",
     "import time\n",
+    "import joblib\n",
     "\n",
     "from sklearn.decomposition import PCA\n",
     "from collections import Counter\n",
@@ -461,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "988917d8",
+   "id": "7e089c8f",
    "metadata": {},
    "source": [
     "## Data Pre-Processing"
@@ -470,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "df5fe64f",
+   "id": "60700a11",
    "metadata": {
     "scrolled": false
    },
@@ -563,7 +564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07f97b8f",
+   "id": "bbbd6467",
    "metadata": {},
    "source": [
     "<p>The normality checks carried out above was to know the distribution of the dataset, which will assist with knowing and selecting the best scaling method to use on the features. From the analysis, it appears that all features in the dataset is non-parametric which signifies that it assumes a specific distribution that is more flexible with different data types. It shows that the dataset can handle ordinal, nominal, and even non-normally distributed numerical data, hence proving that the best scaling feature approach to be used will be <b>Standardization</b> instead of <b>Normalization</b> </p>"
@@ -571,7 +572,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "920be821",
+   "id": "68695931",
    "metadata": {},
    "source": [
     "##### Split the dataset into training and testing sets (e.g., 80-20 split)."
@@ -580,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "459c3987",
+   "id": "48bc53c9",
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "acbf495c",
+   "id": "d5b437af",
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +630,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bce7efcf",
+   "id": "960031b9",
    "metadata": {},
    "source": [
     "##### Perform skewness check on the training data"
@@ -638,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "084c01b8",
+   "id": "fa253125",
    "metadata": {
     "scrolled": false
    },
@@ -690,7 +691,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e59d05a",
+   "id": "e1217c60",
    "metadata": {},
    "source": [
     "From the visulaization of the Skewness above, it is evident that the PCA method which was originally used to transform and dimensionally reduce the features in the dataset, hence resulting in majority of skewness in the output/result. No further action will be carried out on the dataset so as not impact the model's detection or prediction of the rare events, i.e. identifying fraudulent and non fraudulent transactions."
@@ -698,7 +699,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29c53261",
+   "id": "23d45a3c",
    "metadata": {},
    "source": [
     "##### Feature Scaling using Standardization method"
@@ -707,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "4a2d689b",
+   "id": "bab07858",
    "metadata": {
     "scrolled": true
    },
@@ -741,7 +742,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce002bb3",
+   "id": "9f322623",
    "metadata": {},
    "source": [
     "The Standardization appraoch is to center the data around the mean (0) and scales it according to the standard deviation (1) by using the StandardScaler python library. The results of this scaling is to ensure that the dataset is properly prepared for training robust machine learning models."
@@ -749,7 +750,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88c4e1a3",
+   "id": "bca4bbb2",
    "metadata": {},
    "source": [
     "### Feature Engineering\n",
@@ -763,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b6993b8",
+   "id": "f588777a",
    "metadata": {},
    "source": [
     "#### Correlation Attribute Selection"
@@ -772,7 +773,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "09258f3c",
+   "id": "998421ce",
    "metadata": {
     "scrolled": false
    },
@@ -851,7 +852,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88f9bccf",
+   "id": "5e727d56",
    "metadata": {},
    "source": [
     "<p>\n",
@@ -861,7 +862,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "238b1a92",
+   "id": "92fab3dc",
    "metadata": {},
    "source": [
     "##### Using the Elbow Method to determine how many top attributes should be selected based on diminishing returns in feature importance"
@@ -870,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "4f086390",
+   "id": "37f0803e",
    "metadata": {
     "scrolled": false
    },
@@ -966,7 +967,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "234291b4",
+   "id": "a2f7628d",
    "metadata": {},
    "source": [
     "#### Recursive Feature Elimination"
@@ -975,7 +976,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "23be21a2",
+   "id": "6ef7e33b",
    "metadata": {
     "scrolled": false
    },
@@ -1076,7 +1077,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a04517e",
+   "id": "ef1d2aaf",
    "metadata": {},
    "source": [
     "<span>\n",
@@ -1086,7 +1087,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65c8ee2f",
+   "id": "0f6cc6d2",
    "metadata": {},
    "source": [
     "##### Dealing with imbalances on the Correleation Feature Selection data"
@@ -1133,7 +1134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3efc5403",
+   "id": "dbcb6e1a",
    "metadata": {},
    "source": [
     "##### Dealing with imbalances on the RFE trained data"
@@ -1142,7 +1143,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "3458a089",
+   "id": "f6022186",
    "metadata": {},
    "outputs": [
     {
@@ -1279,7 +1280,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "cb0eeab0",
+   "id": "ef45c622",
    "metadata": {
     "scrolled": false
    },
@@ -1325,7 +1326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99bbc313",
+   "id": "f0294ac9",
    "metadata": {},
    "source": [
     "<p>\n",
@@ -1344,7 +1345,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "df84c38c",
+   "id": "69b2088b",
    "metadata": {
     "scrolled": false
    },
@@ -1409,7 +1410,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "b0be585b",
+   "id": "87902684",
    "metadata": {
     "scrolled": false
    },
@@ -1593,7 +1594,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7ccf969",
+   "id": "ee4466cb",
    "metadata": {},
    "source": [
     "## Model Evaluation for Balanced Correlation Attribute Selection"
@@ -1601,7 +1602,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c858abc7",
+   "id": "6ce5bead",
    "metadata": {},
    "source": [
     "<p>\n",
@@ -1757,7 +1758,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "193b55f7",
+   "id": "b03170ee",
    "metadata": {
     "scrolled": false
    },
@@ -1822,7 +1823,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "2a5ff71a",
+   "id": "eeb0b071",
    "metadata": {
     "scrolled": false
    },
@@ -2006,7 +2007,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b693bb7a",
+   "id": "3e030871",
    "metadata": {},
    "source": [
     "## Model Evaluation for Recursive Feature Elimination (RFE)"
@@ -2014,7 +2015,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "562a50be",
+   "id": "48b1d7c2",
    "metadata": {},
    "source": [
     "<p>\n",
@@ -2161,7 +2162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bd00c22",
+   "id": "7bb1be55",
    "metadata": {},
    "source": [
     "## Builing a Neural Network Model with Forward Pass and Backpropagation to evaluate model predictions"
@@ -2170,7 +2171,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "c74e2cb7",
+   "id": "fb9801a4",
    "metadata": {
     "scrolled": false
    },
@@ -2621,7 +2622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05bf52aa",
+   "id": "59077323",
    "metadata": {},
    "source": [
     "<p>From the above, I've created a neural network model using Keras' Sequential model library , where the layers are stacked one after another.\n",
@@ -2646,7 +2647,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "b68a4b99",
+   "id": "12098376",
    "metadata": {},
    "outputs": [
     {
@@ -2663,19 +2664,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "90f7fe97",
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 33,
+   "id": "9d013dab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "echo \"# Fraud-Detection-Model\" >> README.md"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "d1aca7d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git add README.md"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "0a0db546",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: LF will be replaced by CRLF in Year4FinalProject.ipynb.\n",
+      "The file will have its original line endings in your working directory\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git add Year4FinalProject.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "23a21b56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git add selected_features_corr.csv selected_features_rfe.csv X_corr_balanced.csv X_rfe_balanced.csv X_test_creditcard.csv X_test_scaled.csv X_train_creditcard.csv X_train_scaled.csv y_corr_balanced.csv y_rfe_balanced.csv y_test_creditcard.csv y_train_creditcard.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "57e964b5",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "On branch master\n",
+      "[master (root-commit) 87da363] commiting AI models to GitHub\n",
+      " 14 files changed, 58082 insertions(+)\n",
+      " create mode 100644 README.md\n",
+      " create mode 100644 X_corr_balanced.csv\n",
+      " create mode 100644 X_rfe_balanced.csv\n",
+      " create mode 100644 X_test_creditcard.csv\n",
+      " create mode 100644 X_test_scaled.csv\n",
+      " create mode 100644 X_train_creditcard.csv\n",
+      " create mode 100644 X_train_scaled.csv\n",
+      " create mode 100644 Year4FinalProject.ipynb\n",
+      " create mode 100644 selected_features_corr.csv\n",
+      " create mode 100644 selected_features_rfe.csv\n",
+      " create mode 100644 y_corr_balanced.csv\n",
+      " create mode 100644 y_rfe_balanced.csv\n",
+      " create mode 100644 y_test_creditcard.csv\n",
+      " create mode 100644 y_train_creditcard.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git commit -m \"commiting AI models to GitHub\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "48fefb7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git branch -M main"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "b300dc42",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "error: remote origin already exists.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git remote add origin https://github.com/dennyshow/Fraud-Detection-Model.git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "bdc5d98e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Everything up-to-date\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git push"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "7d68b590",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "echo print('Hello World!') >> app.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9bdced80",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch main\n",
+      "Your branch is up to date with 'origin/main'.\n",
       "\n",
-      "No commits yet\n",
+      "Changes to be committed:\n",
+      "  (use \"git restore --staged <file>...\" to unstage)\n",
+      "\tdeleted:    X_corr_balanced.csv\n",
+      "\n",
+      "Changes not staged for commit:\n",
+      "  (use \"git add <file>...\" to update what will be committed)\n",
+      "  (use \"git restore <file>...\" to discard changes in working directory)\n",
+      "\tmodified:   Year4FinalProject.ipynb\n",
       "\n",
       "Untracked files:\n",
       "  (use \"git add <file>...\" to include in what will be committed)\n",
@@ -2729,6 +2874,7 @@
       "\tDownloads/\n",
       "\tFavorites/\n",
       "\tFilteringData.ipynb\n",
+      "\tFinalProjectYear4.ipynb\n",
       "\tIdentifyingOutliers.ipynb\n",
       "\tIntelGraphicsProfiles/\n",
       "\tLab 01_01 Basics.ipynb\n",
@@ -2775,17 +2921,12 @@
       "\tUntitled8.ipynb\n",
       "\tUntitled9.ipynb\n",
       "\tVideos/\n",
-      "\tX_corr_balanced.csv\n",
-      "\tX_rfe_balanced.csv\n",
-      "\tX_test_creditcard.csv\n",
       "\tX_test_processed_medical_insurance.csv\n",
-      "\tX_test_scaled.csv\n",
       "\tX_train_balanced.csv\n",
-      "\tX_train_creditcard.csv\n",
       "\tX_train_processed_medical_insurance.csv\n",
-      "\tX_train_scaled.csv\n",
       "\tYear4 Final Project - Fraud Detection.ipynb\n",
       "\tanaconda3/\n",
+      "\tapp.py\n",
       "\tassignment1.ipynb\n",
       "\tassignment2.ipynb\n",
       "\tassignment3.ipynb\n",
@@ -2808,6 +2949,8 @@
       "\tgradle-demo/\n",
       "\tidentifying_missing_data_and_outliers.html\n",
       "\tmedical_insurance.csv\n",
+      "\tmodel_output.ipynb\n",
+      "\tmodel_output/\n",
       "\tmongo.sh\n",
       "\tmysignature.png\n",
       "\tntuser.dat.LOG1\n",
@@ -2821,19 +2964,12 @@
       "\tprocessed_medical_insurance.csv\n",
       "\tsales-years.csv\n",
       "\tselected_features.csv\n",
-      "\tselected_features_corr.csv\n",
-      "\tselected_features_rfe.csv\n",
       "\tsource/\n",
       "\tx00078774Q3.csv\n",
-      "\ty_corr_balanced.csv\n",
-      "\ty_rfe_balanced.csv\n",
-      "\ty_test_creditcard.csv\n",
       "\ty_test_processed_medical_insurance.csv\n",
       "\ty_train_balanced.csv\n",
-      "\ty_train_creditcard.csv\n",
       "\ty_train_processed_medical_insurance.csv\n",
-      "\n",
-      "nothing added to commit but untracked files present (use \"git add\" to track)\n"
+      "\n"
      ]
     },
     {
@@ -2859,32 +2995,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "917fbf15",
+   "execution_count": 3,
+   "id": "4e582bb1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rm 'X_corr_balanced.csv'\n"
+     ]
+    }
+   ],
    "source": [
-    "echo \"# Fraud-Detection-Model\" >> README.md"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "8c74ce33",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!git add README.md"
+    "!git rm X_corr_balanced.csv"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62ee72ad",
+   "id": "0277b6fd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git add Year4 Final Project - Fraud Detection.ipynb selected_features_corr.csv selected_features_rfe.csv X_corr_balanced.csv X_rfe_balanced.csv X_test_creditcard.csv X_test_scaled.csv X_train_creditcard.csv X_train_scaled.csv y_corr_balanced.csv y_rfe_balanced.csv y_test_creditcard.csv y_train_creditcard.csv"
+    "!git rm X_rfe_balanced.csv X_test_creditcard.csv X_test_scaled.csv X_train_creditcard.csv X_train_scaled.csv selected_features_corr.csv selected_features_rfe.csv y_corr_balanced.csv y_rfe_balanced.csv y_test_creditcard.csv"
    ]
   }
  ],
