add output of model trained for testing in app.py

--- a/Year4FinalProject.ipynb
+++ b/Year4FinalProject.ipynb
@@ -2663,7 +2663,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62f6b522",
+   "id": "75c0d0a7",
    "metadata": {},
    "source": [
     "###### Making sure model trained can be read via app.py"
@@ -2671,28 +2671,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "eafd29b8",
+   "execution_count": 64,
+   "id": "038c6daa",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['model_output/random_forest.pkl']"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "joblib.dump(model, 'model_output/decision_tree.pkl')\n",
-    "joblib.dump(model, 'model_output/knn.pkl')\n",
-    "joblib.dump(model, 'model_output/svm.pkl')\n",
-    "joblib.dump(model, 'model_output/logistic_model.pkl')\n",
-    "joblib.dump(model, 'model_output/naive_bayes.pkl')\n",
-    "joblib.dump(model, 'model_output/random_forest.pkl')\n",
+    "os.makedirs('model_output', exist_ok=True)\n",
     "\n",
     "for name, model in models.items():\n",
     "    filename = f\"model_output/{name.replace(' ', '_').lower()}.pkl\"\n",
@@ -2701,28 +2685,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "7c4f3eb0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "warning: LF will be replaced by CRLF in Year4FinalProject.ipynb.\n",
-      "The file will have its original line endings in your working directory\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git add Year4FinalProject.ipynb\n",
-    "!git commit -m \"\""
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "6d72942e",
+   "id": "b1128059",
    "metadata": {},
    "outputs": [],
    "source": []
