--- a/Year4FinalProject.ipynb
+++ b/Year4FinalProject.ipynb
@@ -2663,7 +2663,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2115c5f8",
+   "id": "81d7a063",
    "metadata": {},
    "source": [
     "###### Making sure model trained can be read via app.py"
@@ -2672,7 +2672,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "0c4fdd04",
+   "id": "c7ad5030",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2685,7 +2685,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "988c9916",
+   "id": "09f740ab",
    "metadata": {},
    "source": [
     "###### Saving the selected features used during model training"
@@ -2694,7 +2694,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "04da0f6a",
+   "id": "e9e90edd",
    "metadata": {},
    "outputs": [
     {
@@ -2717,49 +2717,241 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "6c7c6d22",
+   "execution_count": 78,
+   "id": "c562a76f",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "warning: LF will be replaced by CRLF in Year4FinalProject.ipynb.\n",
-      "The file will have its original line endings in your working directory\n",
-      "warning: LF will be replaced by CRLF in requirements.txt.\n",
-      "The file will have its original line endings in your working directory\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 042b2ca] add requirement.txt and app.py for model test and included other required files for smooth testing\n",
-      " 12 files changed, 2284 insertions(+), 6 deletions(-)\n",
-      " create mode 100644 X_test_scaled.csv\n",
-      " create mode 100644 model_output/decision_tree.pkl\n",
-      " create mode 100644 model_output/knn.pkl\n",
-      " create mode 100644 model_output/logistic_regression.pkl\n",
-      " create mode 100644 model_output/naive_bayes.pkl\n",
-      " create mode 100644 model_output/random_forest.pkl\n",
-      " rename model_output/{model.pkl => selected_columns.json} (100%)\n",
-      " create mode 100644 model_output/selected_features.json\n",
-      " create mode 100644 model_output/svm.pkl\n",
-      " create mode 100644 requirements.txt\n",
-      " create mode 100644 y_test_creditcard.csv\n"
+      "Updating ffbb514..ac40dda\n",
+      "Fast-forward\n",
+      " azure-pipelines.yml | 88 ++++++++++++++++++++++++++++++++++++++---------------\n",
+      " 1 file changed, 63 insertions(+), 25 deletions(-)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "From https://github.com/dennyshow/Fraud-Detection-Model\n",
+      " * branch            main       -> FETCH_HEAD\n",
+      "   ffbb514..ac40dda  main       -> origin/main\n"
      ]
     }
    ],
    "source": [
-    "!git add X_test_scaled.csv y_test_creditcard.csv requirements.txt model_output/ Year4FinalProject.ipynb\n",
-    "!git commit -m \"add requirement.txt and app.py for model test and included other required files for smooth testing\""
+    "!git add azure-pipelines.yml Year4FinalProject.ipynb app.py\n",
+    "!git commit -m \"build azure pipeline for stage and env testing\"\n",
+    "!git push orign main"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "15a2cd4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch main\n",
+      "Your branch is up to date with 'origin/main'.\n",
+      "\n",
+      "Changes not staged for commit:\n",
+      "  (use \"git add <file>...\" to update what will be committed)\n",
+      "  (use \"git restore <file>...\" to discard changes in working directory)\n",
+      "\tmodified:   Year4FinalProject.ipynb\n",
+      "\tmodified:   app.py\n",
+      "\n",
+      "Untracked files:\n",
+      "  (use \"git add <file>...\" to include in what will be committed)\n",
+      "\t#X00078774.csv\n",
+      "\t.anaconda/\n",
+      "\t.aws/\n",
+      "\t.bash_history\n",
+      "\t.cache/\n",
+      "\t.conda/\n",
+      "\t.condarc\n",
+      "\t.config/\n",
+      "\t.continuum/\n",
+      "\t.dbshell\n",
+      "\t.degit/\n",
+      "\t.docker/\n",
+      "\t.dotnet/\n",
+      "\t.eclipse/\n",
+      "\t.gitconfig\n",
+      "\t.gradle/\n",
+      "\t.ipynb_checkpoints/\n",
+      "\t.ipython/\n",
+      "\t.jupyter/\n",
+      "\t.keras/\n",
+      "\t.lesshst\n",
+      "\t.librarymanager/\n",
+      "\t.m2/\n",
+      "\t.matplotlib/\n",
+      "\t.mongorc.js\n",
+      "\t.nbi/\n",
+      "\t.node_repl_history\n",
+      "\t.p2/\n",
+      "\t.packettracer\n",
+      "\t.python_history\n",
+      "\t.sonar/\n",
+      "\t.sonarlint/\n",
+      "\t.ssh/\n",
+      "\t.vscode/\n",
+      "\t.yarnrc\n",
+      "\tAPM_CA1_X00078774.ipynb\n",
+      "\tAppData/\n",
+      "\tApplied AI & Deep Learning CA1.ipynb\n",
+      "\tAttributeSelection.ipynb\n",
+      "\tCA1 1.ipynb\n",
+      "\tCisco Packet Tracer 8.2.1/\n",
+      "\tCleaningData.ipynb\n",
+      "\tContacts/\n",
+      "\tDA_CA_DehindeShogbanmu.ipynb\n",
+      "\tDA_CA_DehindeShogbanmu/\n",
+      "\tDevOps-CA1/\n",
+      "\tDocuments/\n",
+      "\tDownloads/\n",
+      "\tFavorites/\n",
+      "\tFilteringData.ipynb\n",
+      "\tFinalProjectYear4.ipynb\n",
+      "\tIdentifyingOutliers.ipynb\n",
+      "\tIntelGraphicsProfiles/\n",
+      "\tLab 01_01 Basics.ipynb\n",
+      "\tLab 01_02 Data Structures.ipynb\n",
+      "\tLab 01_03 Flow Control.ipynb\n",
+      "\tLab 01_04 Functions.ipynb\n",
+      "\tLab 01_05 Importing and Using Modules.ipynb\n",
+      "\tLab 01_06 Introduction to Pandas.ipynb\n",
+      "\tLab 01_07 Visualisation with Matplotlib.ipynb\n",
+      "\tLab 01_08 Using Pandas and Matplotlib.ipynb\n",
+      "\tLab1 - Python review.ipynb\n",
+      "\tLab_2_Descriptive_Statistics_1.ipynb\n",
+      "\tLab_3_Probability_Distribution.ipynb\n",
+      "\tLab_4_Hypothesis_Testing_part_1.ipynb\n",
+      "\tLinks/\n",
+      "\tMarkingData.ipynb\n",
+      "\tMusic/\n",
+      "\tNTUSER.DAT\n",
+      "\tNTUSER.DAT{14c8bb17-b296-11ef-adf7-010101010000}.TxR.0.regtrans-ms\n",
+      "\tNTUSER.DAT{14c8bb17-b296-11ef-adf7-010101010000}.TxR.1.regtrans-ms\n",
+      "\tNTUSER.DAT{14c8bb17-b296-11ef-adf7-010101010000}.TxR.2.regtrans-ms\n",
+      "\tNTUSER.DAT{14c8bb17-b296-11ef-adf7-010101010000}.TxR.blf\n",
+      "\tNTUSER.DAT{14c8bb18-b296-11ef-adf7-010101010000}.TM.blf\n",
+      "\tNTUSER.DAT{14c8bb18-b296-11ef-adf7-010101010000}.TMContainer00000000000000000001.regtrans-ms\n",
+      "\tNTUSER.DAT{14c8bb18-b296-11ef-adf7-010101010000}.TMContainer00000000000000000002.regtrans-ms\n",
+      "\tOneDrive/\n",
+      "\tProject Yr4 (2) (1).ipynb\n",
+      "\tProject Yr4.ipynb\n",
+      "\tSaved Games/\n",
+      "\tSearches/\n",
+      "\tUntitled.ipynb\n",
+      "\tUntitled1.ipynb\n",
+      "\tUntitled10.ipynb\n",
+      "\tUntitled11.ipynb\n",
+      "\tUntitled12.ipynb\n",
+      "\tUntitled13.ipynb\n",
+      "\tUntitled14.ipynb\n",
+      "\tUntitled2.ipynb\n",
+      "\tUntitled3.ipynb\n",
+      "\tUntitled4.ipynb\n",
+      "\tUntitled5.ipynb\n",
+      "\tUntitled6.ipynb\n",
+      "\tUntitled7.ipynb\n",
+      "\tUntitled8.ipynb\n",
+      "\tUntitled9.ipynb\n",
+      "\tVideos/\n",
+      "\tX_corr_balanced.csv\n",
+      "\tX_rfe_balanced.csv\n",
+      "\tX_test_creditcard.csv\n",
+      "\tX_test_processed_medical_insurance.csv\n",
+      "\tX_train_balanced.csv\n",
+      "\tX_train_creditcard.csv\n",
+      "\tX_train_processed_medical_insurance.csv\n",
+      "\tX_train_scaled.csv\n",
+      "\tYear4 Final Project - Fraud Detection.ipynb\n",
+      "\tanaconda3/\n",
+      "\tassignment1.ipynb\n",
+      "\tassignment2.ipynb\n",
+      "\tassignment3.ipynb\n",
+      "\tassignment4.ipynb\n",
+      "\tassignment5.ipynb\n",
+      "\tbalanced_creditcard.csv\n",
+      "\tbalanced_creditcard_normalized.csv\n",
+      "\tbalanced_creditcard_pca.csv\n",
+      "\tbalanced_creditcard_scaled.csv\n",
+      "\tbank-NaN.csv\n",
+      "\tbank-full.csv\n",
+      "\tbank.csv\n",
+      "\tcountries.csv\n",
+      "\tcreditcard.csv\n",
+      "\teclipse-workspace/\n",
+      "\teclipse/\n",
+      "\texampleDatset1Norm.csv\n",
+      "\texampleNorm.csv\n",
+      "\texampleStand.csv\n",
+      "\tfraud_case_summary.csv\n",
+      "\tgradle-demo/\n",
+      "\tidentifying_missing_data_and_outliers.html\n",
+      "\tmedical_insurance.csv\n",
+      "\tmodel_output.ipynb\n",
+      "\tmongo.sh\n",
+      "\tmysignature.png\n",
+      "\tntuser.dat.LOG1\n",
+      "\tntuser.dat.LOG2\n",
+      "\tntuser.ini\n",
+      "\tpima-cleaned.csv\n",
+      "\tpima-dataset1.csv\n",
+      "\tpima-dataset2.csv\n",
+      "\tpima-indians-diabetes.csv\n",
+      "\tprediction_results.csv\n",
+      "\tprima-NaN.csv\n",
+      "\tprocessed_medical_insurance.csv\n",
+      "\tsales-years.csv\n",
+      "\tselected_features.csv\n",
+      "\tselected_features_corr.csv\n",
+      "\tselected_features_rfe.csv\n",
+      "\tsource/\n",
+      "\tx00078774Q3.csv\n",
+      "\ty_corr_balanced.csv\n",
+      "\ty_rfe_balanced.csv\n",
+      "\ty_test_processed_medical_insurance.csv\n",
+      "\ty_train_balanced.csv\n",
+      "\ty_train_creditcard.csv\n",
+      "\ty_train_processed_medical_insurance.csv\n",
+      "\n",
+      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: could not open directory 'Application Data/': Permission denied\n",
+      "warning: could not open directory 'Cookies/': Permission denied\n",
+      "warning: could not open directory 'Local Settings/': Permission denied\n",
+      "warning: could not open directory 'My Documents/': Permission denied\n",
+      "warning: could not open directory 'NetHood/': Permission denied\n",
+      "warning: could not open directory 'PrintHood/': Permission denied\n",
+      "warning: could not open directory 'Recent/': Permission denied\n",
+      "warning: could not open directory 'SendTo/': Permission denied\n",
+      "warning: could not open directory 'Start Menu/': Permission denied\n",
+      "warning: could not open directory 'Templates/': Permission denied\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git status"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c0e15e4",
+   "id": "e04ca723",
    "metadata": {},
    "outputs": [],
    "source": []
