--- a/Year4FinalProject.ipynb
+++ b/Year4FinalProject.ipynb
@@ -2663,7 +2663,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81d7a063",
+   "id": "f296f8cb",
    "metadata": {},
    "source": [
     "###### Making sure model trained can be read via app.py"
@@ -2672,7 +2672,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "c7ad5030",
+   "id": "e5dc7238",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2685,7 +2685,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09f740ab",
+   "id": "81d495b1",
    "metadata": {},
    "source": [
     "###### Saving the selected features used during model training"
@@ -2694,7 +2694,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "e9e90edd",
+   "id": "6e315e4d",
    "metadata": {},
    "outputs": [
     {
@@ -2717,40 +2717,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "c562a76f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Updating ffbb514..ac40dda\n",
-      "Fast-forward\n",
-      " azure-pipelines.yml | 88 ++++++++++++++++++++++++++++++++++++++---------------\n",
-      " 1 file changed, 63 insertions(+), 25 deletions(-)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "From https://github.com/dennyshow/Fraud-Detection-Model\n",
-      " * branch            main       -> FETCH_HEAD\n",
-      "   ffbb514..ac40dda  main       -> origin/main\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git add azure-pipelines.yml Year4FinalProject.ipynb app.py\n",
-    "!git commit -m \"build azure pipeline for stage and env testing\"\n",
-    "!git push orign main"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "id": "15a2cd4e",
+   "execution_count": 86,
+   "id": "e499f74c",
    "metadata": {},
    "outputs": [
     {
@@ -2764,7 +2732,7 @@
       "  (use \"git add <file>...\" to update what will be committed)\n",
       "  (use \"git restore <file>...\" to discard changes in working directory)\n",
       "\tmodified:   Year4FinalProject.ipynb\n",
-      "\tmodified:   app.py\n",
+      "\tmodified:   requirements.txt\n",
       "\n",
       "Untracked files:\n",
       "  (use \"git add <file>...\" to include in what will be committed)\n",
@@ -2945,13 +2913,14 @@
     }
    ],
    "source": [
-    "!git status"
+    "!git add Year4FinalProject.ipynb requirements.txt\n",
+    "!git commit -m \"adding dependecies due to ve\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e04ca723",
+   "id": "bf667e7b",
    "metadata": {},
    "outputs": [],
    "source": []
