add main.py file for API hosting and more dependencies to requirement.txt

--- a/Year4FinalProject.ipynb
+++ b/Year4FinalProject.ipynb
@@ -2663,7 +2663,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f296f8cb",
+   "id": "5474bfa1",
    "metadata": {},
    "source": [
     "###### Making sure model trained can be read via app.py"
@@ -2672,7 +2672,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "e5dc7238",
+   "id": "0e17736c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2685,7 +2685,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81d495b1",
+   "id": "ba8be263",
    "metadata": {},
    "source": [
     "###### Saving the selected features used during model training"
@@ -2694,7 +2694,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "6e315e4d",
+   "id": "2a850ef7",
    "metadata": {},
    "outputs": [
     {
@@ -2717,8 +2717,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "id": "e499f74c",
+   "execution_count": 93,
+   "id": "275deea6",
    "metadata": {},
    "outputs": [
     {
@@ -2728,10 +2728,13 @@
       "On branch main\n",
       "Your branch is up to date with 'origin/main'.\n",
       "\n",
+      "Changes to be committed:\n",
+      "  (use \"git restore --staged <file>...\" to unstage)\n",
+      "\tdeleted:    Year4FinalProject.ipynb\n",
+      "\n",
       "Changes not staged for commit:\n",
       "  (use \"git add <file>...\" to update what will be committed)\n",
       "  (use \"git restore <file>...\" to discard changes in working directory)\n",
-      "\tmodified:   Year4FinalProject.ipynb\n",
       "\tmodified:   requirements.txt\n",
       "\n",
       "Untracked files:\n",
@@ -2842,6 +2845,7 @@
       "\tX_train_processed_medical_insurance.csv\n",
       "\tX_train_scaled.csv\n",
       "\tYear4 Final Project - Fraud Detection.ipynb\n",
+      "\tYear4FinalProject.ipynb\n",
       "\tanaconda3/\n",
       "\tassignment1.ipynb\n",
       "\tassignment2.ipynb\n",
@@ -2865,6 +2869,7 @@
       "\tfraud_case_summary.csv\n",
       "\tgradle-demo/\n",
       "\tidentifying_missing_data_and_outliers.html\n",
+      "\tmain.py\n",
       "\tmedical_insurance.csv\n",
       "\tmodel_output.ipynb\n",
       "\tmongo.sh\n",
@@ -2891,8 +2896,7 @@
       "\ty_train_balanced.csv\n",
       "\ty_train_creditcard.csv\n",
       "\ty_train_processed_medical_insurance.csv\n",
-      "\n",
-      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
+      "\n"
      ]
     },
     {
@@ -2913,14 +2917,16 @@
     }
    ],
    "source": [
-    "!git add Year4FinalProject.ipynb requirements.txt\n",
-    "!git commit -m \"adding dependecies due to ve\""
+    "!git add main.py requirements.txt\n",
+    "!git commit -m \"adjust code to pass test and dev stage in pipeline\"\n",
+    "!git pull\n",
+    "!git push"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf667e7b",
+   "id": "427b0a0c",
    "metadata": {},
    "outputs": [],
    "source": []
